# nuntium

./: .gitignore  Pipfile  README.md  egg.sh  fuckjs  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: api.py  predictor.py
app/api/routes/endpoints/: users.py  utils.py
app/core/: config.py  logging.py
app/db/: base.py
app/models/: prediction.py
app/services/: predict.py
tests/: test_pagination_behavior.py
